--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <!--<img src="bench.jpg" class="img-fluid">-->
+          <img src="bench.jpg" class="img-fluid">
         </div>
         <div class="col-md-6">
           <h2>Hello!</h2>
