--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><a href="https://github.com/ysab-gon/MD-ACT1">MD-ACT1</a></td>
+            <td><a href="https://github.com/ysab-gon/WTS">WTS</a></td>
             <td>A simple landing page.</td>
             <td>---</td>
           </tr>
