--- a/index.html
+++ b/index.html
@@ -133,15 +133,15 @@
           <tr>
             <td><a href="https://github.com/ysab-gon/WTS">WTS</a></td>
             <td>A simple landing page.</td>
-            <td>---</td>
+            <td>HTML, CSS</td>
           </tr>
           <tr>
-            <td><a href="#">Repository Name</a></td>
+            <td><a href="#">-------</a></td>
             <td>-----</td>
             <td>---</td>
           </tr>
           <tr>
-            <td><a href="#">Repository Name</a></td>
+            <td><a href="#">-------</a></td>
             <td>-----</td>
             <td>---</td>
           </tr>
