--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@
             <td>HTML, CSS</td>
           </tr>
           <tr>
-            <td><a href="#">-------</a></td>
+            <td><a href="#"></a></td>
             <td>-----</td>
             <td>---</td>
           </tr>
           <tr>
-            <td><a href="#">-------</a></td>
+            <td><a href="#"></a></td>
             <td>-----</td>
             <td>---</td>
           </tr>
